<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">HackDash</string>
    <string name="dashclock_label">Hackerspace Status</string>
    <string name="app_description">Choose your favorite HackerSpace to see its open state.</string>

    <string name="status_message">Hackerspace is %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>

    <string name="done">Done</string>

    <string name="setup">Setup</string>
    <string name="settings_choose_title">Choose your Hackerspace</string>
    <string name="settings_choose_message">Click here to choose your Hackerspace!</string>

    <string name="error_title">Error!</string>
    <string name="error_message">Error in getting the list of Hackerspaces.</string>

    <string name="settings_label">HackDash Settings</string>

    <string name="pref_key_category_general" translatable="false">pref_category_general</string>
    <string name="pref_title_general">General</string>

    <string name="pref_title_integrations">Integrations</string>
    <string name="pref_key_integrations" translatable="false">pref_integrations</string>
    <string name="pref_key_dashclock_integration" translatable="false">pref_dashclock_integration</string>
    <string name="pref_title_dashclock_integration">DashClock App Integration</string>
    <string name="pref_summary_dashclock_installed">Open DashClock settings to add "Hackerspace Status".</string>
    <string name="pref_summary_dashclock_not_installed">Click here to install DashClock Widget and then enable this app inside DashClock.</string>

    <string name="pref_key_space_name" translatable="false">space_name</string>
    <string name="pref_key_space_url" translatable="false">space_url</string>

    <string name="pref_key_launcher_intent" translatable="false">pref_launcher_intent</string>
    <string name="pref_title_launcher_intent">Hide App Icon</string>
    <string name="pref_summary_launcher_intent_on">App icon is hidden.</string>
    <string name="pref_summary_launcher_intent_off">App icon is visible on homescreen.</string>


</resources>
