<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  >

  <ListPreference
    android:key="@string/pref_key_space_name"
    android:enabled="false"
    android:dependency="@string/pref_key_dashclock_integration"
    android:title="@string/settings_choose_title"
    android:summary="@string/settings_choose_message"/>


  <PreferenceCategory
    android:title="@string/pref_title_integrations">

    <!-- dashclock App Check Preference-->
    <com.tasomaniac.dashclock.hackerspace.ui.IntegrationPreference
      android:key="@string/pref_key_dashclock_integration"
      android:persistent="false"
      android:defaultValue="true"
      android:summaryOn="@string/pref_summary_dashclock_not_installed"
      android:summaryOff="@string/pref_summary_dashclock_installed"
      android:title="@string/pref_title_dashclock_integration">
      <intent
        android:targetClass="com.google.android.apps.dashclock.configuration.ConfigurationActivity"
        android:targetPackage="net.nurik.roman.dashclock"/>
    </com.tasomaniac.dashclock.hackerspace.ui.IntegrationPreference>

  </PreferenceCategory>

</PreferenceScreen>
